<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Droid2600</string>
    <string name="emulator_activity_name">Droid2600 - Emulator</string>
    <string name="sdcard_error">SD Card Error</string>
    <string name="directory_error">Directory Error</string>
    <string name="no_files_error">No Files</string>

        <!-- Button Text -->
    <string name="preferencesButton">Preferences</string>
    <string name="reloadPreferencesButton">Reload Default Preferences</string>
    <string name="aboutButton">About</string>

    <!-- Simple strings. -->
    <string name="skeleton_app">Skeleton App</string>

    <!-- This is a complex string containing style runs. -->
    <string name="main_label">/sdcard</string>

    <!-- PREFERENCES -->
    <string name="consolePrefs">Console Controls</string>
    <string name="resetButtonTitle">Reset Button</string>
    <string name="resetButtonSummary">Reset Button Summary</string>
    <string name="resetButtonDialogTitle">Reset Button Dialog Title</string>


    <string name="checkboxPreferenceTitle">checkboxPreferenceTitle</string>
    <string name="checkboxPreferenceSummary">checkboxPreferenceSummary</string>
    <string name="controlPrefs">controlPrefs</string>
    <string name="listPreferenceTitle">listPreferenceTitle</string>
    <string name="listPreferenceSummary">listPreferenceSummary</string>
    <string name="listPreferencesDialogTitle">listPreferencesDialogTitle</string>

    <string name="up_one_level">..</string>
    <string name="current_dir">.</string>
    
    <string name="testButton">Test Button</string>

    <!-- START ABOUT SCREEN -->
    <string name="about_title">Droid2600</string>
    <string name="about_about_title">About</string>
    <string name="about_about_text">Droid2600 is an Atari 2600/VCS emulator based on the <a href="http://stella.sourceforge.net">Stella</a> multi-platform Atari emulator. Source code and support is available <a href="http://code.google.com/p/droid2600/wiki/Manual">code.google.com/p/droid2600</a>. Follow Droid2600 on <a href="http://www.twitter.com/Droid2600">Twitter</a></string>
    <string name="about_credits_title">Credits</string>
    <string name="about_credits_stella">* Emulator code based on the Stella cross platform Atari VCS emulator available at <a href="http://stella.sourceforge.net">stella.sourceforge.net</a></string>
    <string name="about_credits_sdl">* SDL port to Android based on work by pelya available <a href="https://github.com/pelya/commandergenius">here</a></string>
    <string name="about_credits_image">* Home screen photo from <a href="http://www.ifixit.com/Guide/Image/meta/bmTLAbT3brcHLtV6">ifixit.com</a></string>
    <!-- END ABOUT SCREEN -->

    <!-- quit confirmation dialog -->
    <string name="quit">Quit Droid2600?</string>
    <string name="really_quit">Leave emulation and go back to the main menu?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
