<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/about_linearlayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp"
    android:gravity="center|fill"
    android:orientation="vertical"
    android:scrollbars="vertical">
<ScrollView 
    android:id="@id/about_scrollview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/about_linearlayout_2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp"
    android:gravity="center|fill"
    android:orientation="vertical"
    android:scrollbars="vertical">
    <TextView
        android:text="@string/about_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:singleLine="true"
        android:gravity="center"
        android:textSize="36sp"
        android:textColor="#e0e0e0"
        android:padding="5dp"/>
    <TextView
        android:text="@string/about_about_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:singleLine="true"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#e0e0e0"
        android:padding="5dp"/>
    <TextView
        android:text="@string/about_about_text"
        android:id="@id/about_about_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="#e0e0e0"
        android:padding="5dp"/>
    <TextView
        android:text="@string/about_credits_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:singleLine="true"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#e0e0e0"
        android:padding="5dp"/>
    <TextView
        android:text="@string/about_credits_stella"
        android:id="@id/about_credits_stella_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="#e0e0e0"
        android:padding="5dp"/>
    <TextView
        android:text="@string/about_credits_sdl"
        android:id="@id/about_credits_sdl_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="#e0e0e0"
        android:padding="5dp"/>
    <TextView
        android:text="@string/about_credits_image"
        android:id="@id/about_credits_image_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="#e0e0e0"
        android:padding="5dp"/>
</LinearLayout>
</ScrollView>
</LinearLayout>



